Slider hold on mobile fix?

--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ main {
 }
 
 picture, img {
+    user-select: none;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    -webkit-touch-callout:none;
     pointer-events: none;
     display: block;
     width: 100%;
